--- a/TrabajoFinal/src/main/resources/application.properties
+++ b/TrabajoFinal/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #configuracion de acceso a BD
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #estrategia de generacion de base de datos
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/TrabajoFinal
